<resources>
    <string name="app_name">Rajkot Jobs</string>
    <string name="aria">Tirupati Nagar,
    Arya Nagar,
    Sadar,
    Race Course,
    Rajkot Airport,
    Shastri Nagar,
    Gayakwadi,
    Kothi Compound,
    Lohana Para,
    Bajrang Wadi,
    Ghandhigram,
    Loco Colony Railway Quarters,
    Popat Para,
    Railnagar,
    New Thorala,
    Bhakti Nagar,
    Sardar Nagar,
    Atika Industrial Area,
    Rajlakshmi Society,
    Geeta Nagar Society,
    Lakshmiwadi Society,
    Aji Industrial Estate,
    Diwanpara,
    Prahlad Plot,
    Rajkot Marketing Yard,
    Samrat Industrial Area,
    Aji Vasahat,
    Kothariya Nagar,
    New Sarvoday Society,
    New Subhash Nagar,
    Morari Nagar,
    Mavadi Industrial Area,
    Chandreshnagar,
    Amar Nagar,
    Astron Society main Rd,
    Jangleshwar,
    Gundawadi,
    Bhaktinagar Society,
    Bhakti Nagar Station Plot,
    Madhav Rao Sindhiya Cricket Stadium,
    Kotecha Nagar,
    Jayraj Plot,
    Rajputpara,
    Navagam,
    Madhapar,
    Munjka,
    Raiya,
    Saurastra University Campus,
    Aalap Avenue,
    Sadguru Nagar,
    Ravi Park,
    Mavdi Village,
    Jagnath Plot,
    Doordarshan Kendra Colony,
    Siddharth Santoki City,
    GIDC,
    150 Feet Ring Road,
    Nana Mava Road,
    Motavada,
    Kalawad Road,
    Sadhu Vasvani Road,
    Sitaram Road,
    Amin Marg,
    Himatnagar,
    Jalaram 2,
    Nirmala Road,
    Ranchhodnagar Society,
    Gandhigram,
    Airport Road,
    Karansinhji Road,
    Shroff Road,
    Nana Mava,
    Mavadi Plot,
    Mota Mava,
    Maruti Nagar,
    Yogi Nagar,
    Jankalyan Society,
    Panchvati Main Road,
    Ghanshyam Nagar,
    Univesity Road,
    Gondal Road,
    Vavdi,
    Vardhman Nagar,
    Pipaliya,
    Dhoraji,
    Rama Krishan Nagar
    </string>>
    <string name="role">
        Accountant,
Animation,
Architect,
Bartender,
Beautician,
Bouncer,
BPO/ Telecaller,
Business Analyst,
Cameraman,
Caretaker/Nanny,
Carpenter,
Cashier,
Cleaner/Washer,
Construction/Laborer,
Content Writer,
Control Room Operator,
Cook,
Counsellor,
Data Collection/Survey,
Data Entry /Back Office,
Data Scientist,
Database/System/Linux Administrator,
Delivery/Collections,
Designer,
Doctor,
Draftsman,
Driver,
DTP Operator/Print Consultant,
Dubbing Artist,
Dye Maker,
Editor,
Electrician,
Electroplater,
Engineer,
Event Planner,
Financial Advisor,
Fire Fighter,
Fitter,
Floor Manager,
Foundryman,
Gardener,
Handyman,
Hospitality Executive,
Host/Hostess,
Housekeeping,
HR/Admin,
Insurance Consultant,
IT Hardware and Network Engineer,
IT Software - Developer,
IT Software - QA/Test Engineer,
IT Software - Web Designer,
Lab Assistant,
Language Translator,
Legal,
Librarian,
Life Guard,
Lighting Technician,
Maid,
Market Research Analyst,
Marketing,
Mechanic,
Medical Assistant,
Medical Representative,
Microbiologist,
MIS Executive,
Moulder,
Nurse,
Nutritionist/Dietician,
Office Assistant/Helper,
Operator/Machinist,
Optometrist,
Packager,
Painter,
Pest Control Executive,
Pharmacist,
Photographer,
Plumber,
Porter,
Product Manager,
Program/Project Manager,
Projectionist,
Public Relations,
Purchase Executive,
Quality and Inspection,
Receptionist/Front Office,
Reporter,
Rigger,
Safety Officer,
Sales,
SAP Consultant,
Scientist-Research,
Security/Guard,
Sheet Metal Worker,
Software Architect,
Soldering Operator,
Sound Engineer,
Sports Trainer,
Tailor,
Teacher,
Ticketing Executive,
Trainer,
Videographer,
Waiter/Steward,
Ward Boy,
Warehouse Executive,
Welder,
Wireman
    </string>
    <string name="title_activity_main_drawer">MainDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="type_of_job">What type of job is it?</string>
    <string name="post_job">Post Job</string>
    <string name="frasher">Fresher</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="job_des">Job Description</string>
    <string name="about_company">About Company</string>
    <string name="company_sallary">What is the salary for this job? (optional)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unameerror">Enter Name</string>
    <string name="emptyemail">Enter email</string>
    <string name="invelidemail">Enter Invelid email </string>
    <string name="emptypwd">Enter password</string>
    <string name="emptyconformpwd">Enter Confirm Password</string>
    <string name="pwdnotmatch">Both Password does not mathc</string>
    <string name="emptymobile">Enter Mobile Number</string>
    <string name="invelidmobile">Enter Correct Mobile Number</string>
    <string name="address">Enter Address</string>
    <string name="job_save_successfully">Job saved successfully!</string>

</resources>
