<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_scrollFlags="enterAlwaysCollapsed">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/ll_first"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/onefive"
                android:visibility="visible">

                <TextView
                    android:id="@+id/head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/post_job"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/threezero" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head"
                    android:layout_marginBottom="@dimen/onetwo"
                    android:layout_marginLeft="@dimen/onetwo"
                    android:layout_marginRight="@dimen/onefive"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_job_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_job_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/et_job_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/two"
                                android:hint="Job Title"
                                android:inputType="text"
                                android:paddingLeft="@dimen/five"
                                android:textColor="@color/colorPrimary" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/onezero"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/two"
                            android:text="@string/type_of_job"
                            android:textColor="@color/black"
                            android:textSize="@dimen/onesix" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/experience"
                        android:textColor="@color/black"
                        android:textSize="@dimen/onesix" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frasher"
                        android:textColor="@color/black"
                        android:textSize="@dimen/onesix" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/onezero"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/two"
                            android:text="@string/company_sallary"
                            android:textColor="@color/black"
                            android:textSize="@dimen/onesix" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:id="@+id/ll_salary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_salary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_salary_from"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/two"
                                    android:hint="Rs. Min"
                                    android:inputType="numberDecimal"
                                    android:paddingLeft="@dimen/five"
                                    android:textColor="@color/colorPrimary" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <android.support.design.widget.TextInputLayout

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_salary_to"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/two"
                                    android:hint="Rs. Max"
                                    android:inputType="numberDecimal"
                                    android:paddingLeft="@dimen/five"
                                    android:textColor="@color/colorPrimary" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/onezero"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/two"
                            android:text="@string/job_des"
                            android:textColor="@color/black"
                            android:textSize="@dimen/onesix" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/onefivezero"
                                android:layout_marginLeft="@dimen/two"
                                android:background="@drawable/border_full"
                                android:gravity="start"
                                android:inputType="text"
                                android:paddingLeft="@dimen/five"
                                android:textAlignment="viewStart"
                                android:textColor="@color/colorPrimary" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/onezero"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/two"
                            android:text="@string/experience"
                            android:textColor="@color/black"
                            android:textSize="@dimen/onesix" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Spinner

                            android:id="@+id/spinner_experince"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:singleLine="true"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/onezero"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/two"
                            android:text="@string/education"
                            android:textColor="@color/black"
                            android:textSize="@dimen/onesix" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner

                            android:id="@+id/spinner_education"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:singleLine="true" />


                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll"
                    android:layout_marginTop="@dimen/twofive"
                    android:background="@drawable/btnfill"
                    android:padding="@dimen/five"
                    android:text="Post"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/twozero" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
